Clojure Collector: added support for /:vendor/:version to HEAD (#1166)
Clojure Collector: added CORS support (#1146)
EmrEtlRunner: removed hyphen from the pattern match for Clojure Collector logs (#1194)
EmrEtlRunner: on job failure, log overall jobflow and individual step statuses (#1153)
Scala Common Enrich: bumped Scala Iglu Client to 0.2.0 (#1222)
Scala Common Enrich: added Adapter to pre-process Pingdom events (#1164)
Scala Common Enrich: added Adapter to pre-process PagerDuty events (#1158)
Scala Common Enrich: added Adapter to pre-process Mandrill events (#1061)
Scala Hadoop Enrich: added test job for PingdomAdapter (#1176)
Scala Hadoop Enrich: added test job for PagerDutyAdapter (#1175)
Scala Hadoop Enrich: added test job for MandrillAdapter (#1171)
StorageLoader: wrote JSON Path file for com.pingdom/incident_notify_of_close event (#1182)
StorageLoader: wrote JSON Path file for com.pingdom/incident_assign event (#1181)
StorageLoader: wrote JSON Path file for com.pagerduty/incident event (#1177)
StorageLoader: wrote JSON Path file for com.mandrill/message_sent event (#1059)
StorageLoader: wrote JSON Path file for com.mandrill/message_bounced event (#1058)
StorageLoader: wrote JSON Path file for com.mandrill/message_opened event (#1057)
StorageLoader: wrote JSON Path file for com.mandrill/message_marked_as_spam event (#1056)
StorageLoader: wrote JSON Path file for com.mandrill/message_delayed event (#1055)
StorageLoader: wrote JSON Path file for com.mandrill/message_soft_bounced event (#1054)
StorageLoader: wrote JSON Path file for com.mandrill/message_clicked event (#1053)
StorageLoader: wrote JSON Path file for com.mandrill/message_rejected event (#1052)
StorageLoader: wrote JSON Path file for com.mandrill/recipient_unsubscribed event (#1051)
Redshift: added Redshift DDL for a com.pingdom/incident_notify_of_close event (#1180)
Redshift: added Redshift DDL for a com.pingdom/incident_assign event (#1179)