@@ -7,6 +7,7 @@ Clojure Collector: added CORS support (#1146)
 EmrEtlRunner: removed hyphen from the pattern match for Clojure Collector logs (#1194)
 EmrEtlRunner: on job failure, log overall jobflow and individual step statuses (#1153)
 Scala Common Enrich: bumped Scala Iglu Client to 0.2.0 (#1222)
+Scala Common Enrich: updated SnowplowAdapter to accept payload_data versions above 1-0-0 (#1220)
 Scala Common Enrich: added Adapter to pre-process Pingdom events (#1164)
 Scala Common Enrich: added Adapter to pre-process PagerDuty events (#1158)
 Scala Common Enrich: added Adapter to pre-process Mandrill events (#1061)
